<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kdk.imagesearch.activities.SettingsActivity" >

    <TextView
        android:id="@+id/tvSizeSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spImageSize"
        android:layout_alignRight="@+id/tvColorLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/SizeSetting" />
    
     <Spinner
        android:id="@+id/spImageSize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spImageColor"
        android:layout_alignParentTop="true"
        android:textSize="15sp"
        android:entries="@array/imageSizeSettingsSpinner"
        android:prompt="@string/sizeSpinnerPrompt"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tvColorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spImageColor"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/spImageColor"
        android:gravity="center"
        android:text="@string/tvColorLabel"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spImageColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spImageSize"
        android:layout_toRightOf="@+id/tvColorLabel"
        android:entries="@array/imageColorSpinner"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvImageTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spImageType"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/tvColorLabel"
        android:layout_below="@+id/tvColorLabel"
        android:gravity="center"
        android:text="@string/tvTypeLabel"
        android:textSize="15sp" />
    
    <Spinner
        android:id="@+id/spImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spImageColor"
        android:layout_toRightOf="@+id/tvImageTypeLabel"
        android:entries="@array/imageTypeSpinner"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvSiteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etSite"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/tvImageTypeLabel"
        android:layout_below="@+id/tvImageTypeLabel"
        android:gravity="center"
        android:text="@string/tvSiteLabel"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spImageType"
        android:layout_toRightOf="@+id/tvSiteLabel"
        android:hint="@string/etSiteHint"
        android:lines="1"
        android:textSize="15sp" />

</RelativeLayout>
